# Task-Manager

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
accounts/migrations/: 0001_initial.py
apps/comments/: mention_parser.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
apps/comments/migrations/: 0001_initial.py  0002_alter_comment_options_alter_comment_table.py  0003_remove_comment_task_comment_content_type_and_more.py
apps/comments/models/: comment.py
apps/comments/serializers/: __init__.py  comment.py
apps/comments/views/: comment.py
apps/projects/: models.py  permissions.py  serializers.py  urls.py  views.py
apps/tasks/: apps.py  models.py  serializers.py  urls.py  views.py
apps/users/: admin.py  apps.py  models.py  permissions.py  serializers.py  views.py
bruno/: bruno.json  collection.bru
bruno/NamloTech/: opencollection.yml
bruno/auth/: login.bru  register.bru
bruno/comments/: create_comment.bru  create_reply.bru  delete_comment.bru  folder.bru  get_comment.bru  list_comments.bru  update_comment.bru
bruno/environments/: local.bru
bruno/projects/: add_member.bru  create_project.bru  delete_project.bru  folder.bru  get_project.bru  list_members.bru  list_projects.bru  remove_member.bru  update_project.bru
bruno/tasks/: create_task.bru  delete_task.bru  folder.bru  get_task.bru  list_tasks.bru  update_task.bru
taskmanager/: settings.py  urls.py
users/: admin.py  tests.py  urls.py
users/migrations/: 0002_alter_user_managers_user_role_alter_user_email_and_more.py
(+16 files in other folders)
