[project]
name = "taskmanager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.6",
    "django-filter>=25.2",
    "djangorestframework>=3.17.1",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "factory-boy>=3.3.3",
    "pytest>=9.1.1",
    "pytest-django>=4.12.0",
]
